# projectmanagementdashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: api.yml  ci.yml
backend/: Dockerfile  alembic.ini  custom_types.py  dependencies.py  main.py  requirements.dev.txt
backend/alembic/: env.py
backend/alembic/versions/: 0872e1999baa_initial_migration.py  3b97337f8e79_add_created_at_and_content_type_fields.py
backend/aws_utility/: s3_buckets.py
backend/core/: config.py  security.py
backend/db/: database.py  session.py  utility.py
backend/models/: __init__.py  document.py  project.py  project_user.py  user.py
backend/routers/: projects.py  users.py
backend/schemas/: document.py  project.py  user.py
frontend/: next.config.ts
frontend/src/lib/: api.ts
lambda/: handler.py
terraform/: .gitignore  alb.tf  ecs.tf  iam.tf  lambda.tf  main.tf  outputs.tf  rds.tf  s3.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
tests/: conftest.py
tests/test_projects/: conftest.py  test_projects.py
tests/test_users/: conftest.py  test_users.py
