[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"


[project]
name = "project-management-dashboard"
description = "Backend (FastAPI) for the Project Management Dashboard."
version = "2026.0.0a1"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
  {name = "Marcin Konarski"},
  {name = "Ruslan Melnyk"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.40.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "sqlmodel>=0.0.32",
  "SQLAlchemy>=2.0.0",
  "alembic>=1.18.0",
  "psycopg2-binary>=2.9.0",
  "boto3>=1.42.0",
  "PyJWT>=2.0.0",
  "pwdlib[argon2]>=0.3.0",
]


[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.10.0",
  "ruff>=0.3.0",
  "pre-commit>=3.0.0",
]


[project.urls]
Homepage = "https://mk0x.com"
Documentation = "https://api.mk0x.com"
Repository = "https://github.com/Marcin-Konarski/Project-Management-Dashboard.git"


[tool.hatch.build.targets.wheel]
packages = ["backend"]


[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
